<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Capstone_Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="view">View Reminders</string>
    <string name="add">Add New Reminders</string>
    <string name="map">View Map</string>
    
    <string name="title">Title</string>
	<string name="location">Location</string>
	<string name="alert_me">Alert me...</string>
	<string-array name="alert">
        <item>At Location</item>
        <item>Within 1 mile</item>
        <item>Within 5 miles</item>
        <item>Within 10 miles</item>
    </string-array>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
