<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.capstone_project.MainActivity" >

    <EditText android:id="@+id/title"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:hint="@string/title" />
    
    <AutoCompleteTextView android:id="@+id/location"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/title"
        android:hint="@string/location" />
	<Spinner
	    android:id="@+id/alert"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:layout_below="@+id/location"
	    android:hint="@string/alert_me"/>
	<EditText
	    android:id="@+id/notes"
	    android:inputType="textMultiLine" 
	    android:lines="8" 
	    android:minLines="6" 
	    android:gravity="top|left" 
	    android:maxLines="10" 
	    android:layout_height="wrap_content" 
	    android:layout_width="fill_parent" 
	    android:scrollbars="vertical" 
	    android:layout_below="@+id/alert"
	    android:hint="@string/notes"/>

	<Button
	    android:id="@+id/cancel"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/notes"
	    android:layout_below="@+id/notes"
	    android:layout_marginLeft="40dp"
	    android:background="@android:drawable/btn_default"
	    android:onClick="Cancel"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/cancel"
	    android:textSize="20sp" />

	<Button
	    android:id="@+id/save"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/cancel"
	    android:layout_alignBottom="@+id/cancel"
	    android:layout_alignRight="@id/notes"
	    android:layout_marginRight="40dp"
	    android:background="@android:drawable/btn_default"
	    android:onClick="Save"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/save"
	    android:textSize="20sp" />
	
</RelativeLayout>
